# hsync

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Specification.md  coverage.sh  verify.sh  verify_poc.sh
benches/: hash_throughput.rs
src/: cleanup.rs  db.rs  lib.rs  main.rs  pipeline.rs  scan.rs  utils.rs
tests/: integration_test.rs
