[package]
name = "hsync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
walkdir = "2.4"
sha2 = "0.10"
filetime = "0.2"
crossbeam-channel = "0.5"
anyhow = "1.0"
indicatif = "0.17"
chrono = "0.4"
hex = "0.4"
