[package]
name = "hsync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2.5"
sha2 = "0.10.9"
md-5 = "0.10.6"
sha-1 = "0.10.1"
blake2 = "0.10.6"
filetime = "0.2.26"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
indicatif = "0.18.3"
chrono = "0.4.42"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.19"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hash_throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
